kubernetes/neural-text-to-speech-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neural-text-to-speech-deployment
  labels:
    app: neural-text-to-speech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neural-text-to-speech
  template:
    metadata:
      labels:
        app: neural-text-to-speech
    spec:
      containers:
      - name: neural-text-to-speech
        image: mcr.microsoft.com/azure-cognitive-services/speechservices/neural-text-to-speech:3.1.0-amd64-ja-jp-nanamineural
        # image: mcr.microsoft.com/azure-cognitive-services/speechservices/neural-text-to-speech:3.1.0-amd64-en-us-jennymultilingualneural
        # resources:
        #   requests:
        #     cpu: "6" 
        #     memory: "12Gi"
        #   limits:
        #     cpu: "6" 
        #     memory: "12Gi" 
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-nakamura-kv"
