kubernetes/neural-text-to-speech-en-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neural-text-to-speech-en-deployment
  labels:
    app: neural-text-to-speech-en
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neural-text-to-speech-en
  template:
    metadata:
      labels:
        app: neural-text-to-speech-en
    spec:
      containers:
      - name: neural-text-to-speech-en
        image: mcr.microsoft.com/azure-cognitive-services/speechservices/neural-text-to-speech:3.1.0-amd64-en-us-arianeural
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-nakamura-kv"
