kubernetes/speech-to-text-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speech-to-text-deployment
  labels:
    app: speech-to-text
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speech-to-text
  template:
    metadata:
      labels:
        app: speech-to-text
    spec:
      containers:
      - name: speech-to-text
        image: mcr.microsoft.com/azure-cognitive-services/speechservices/speech-to-text:4.5.0-amd64-ja-jp
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-nakamura-kv"
