kubernetes/ubuntu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-xfce-desktop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu-xfce-desktop
  template:
    metadata:
      labels:
        app: ubuntu-xfce-desktop
    spec:
      containers:
      - name: ubuntu-xfce
        image: linuxserver/rdesktop:amd64-ubuntu-xfce
        ports:
        - containerPort: 3389
