kubernetes/neural-text-to-speech-en-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neural-text-to-speech-en
spec:
  type: ClusterIP
  selector:
    app: neural-text-to-speech-en
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
