kubernetes/neural-text-to-speech-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neural-text-to-speech
spec:
  type: ClusterIP
  selector:
    app: neural-text-to-speech
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
