kubernetes/openaicompletions-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openaicompletions
spec:
  type: ClusterIP
  selector:
    app: openaicompletions
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3100
