kubernetes/speech-to-text-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speech-to-text
spec:
  type: ClusterIP
  selector:
    app: speech-to-text
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
