kubernetes/voicevox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voicevox
spec:
  type: ClusterIP
  selector:
    app: voicevox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 50021
