kubernetes/neural-text-to-speech-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: text-to-speech-ingress
  annotations: 
    kubernetes.azure.com/tls-cert-keyvault-uri: https://nakamura-kv.vault.azure.net/certificates/wildhearmetalkCA/feb4f1db6f4e4a9a88523ae96c007a64
    nginx.ingress.kubernetes.io/whitelist-source-range: 126.247.245.2/32,10.244.0.17/32
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: text-to-speech.hearmetalk.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neural-text-to-speech
                port:
                  number: 80
  tls:
  - hosts:
    - text-to-speech.hearmetalk.net 
    secretName: keyvault-text-to-speech-ingress
