kubernetes/voicevox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voicevox-ingress
  annotations: 
    kubernetes.azure.com/tls-cert-keyvault-uri: https://nakamura-kv.vault.azure.net/certificates/wildhearmetalkCA/feb4f1db6f4e4a9a88523ae96c007a64
    nginx.ingress.kubernetes.io/whitelist-source-range: 126.117.183.184/32,10.244.1.5/32
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: voicevox.hearmetalk.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voicevox
                port:
                  number: 80
  tls:
  - hosts:
    - voicevox.hearmetalk.net 
    secretName: keyvault-voicevox-ingress
